--- a/Code/dotnetLexChatBot/appsettings.json
+++ b/Code/dotnetLexChatBot/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "AWSConfiguration": {
-    "CognitoPoolID": "Enter Your Cognito Identity Pool",
-    "LexBotName": "Enter Your Lex Bot Name",
+    "CognitoPoolID": "us-east-1:c21ff6ee-c829-4306-a013-1a3765fbf121",
+    "LexBotName": "BookTrip",
     "LexRole": "",
-    "LexBotAlias": "Enter Your Lex Bot Alias",
+    "LexBotAlias": "test",
     "BotRegion":  "us-east-1"
    }
 }
